services/keycloak/server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  ports:
    - name: http
      port: 8080
      targetPort: http
