services/keycloak/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
spec:
  ingressClassName: istio
  tls:
    - hosts:
        - keycloak.nazarewk.pw
  rules:
    - host: keycloak.nazarewk.pw
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  name: http
